--- a/README
+++ b/README
@@ -44,11 +44,11 @@ Contact Information
 For any comments or suggestions, feel free to contact me at:
 	nuclear@siggraph.org
 	
-you may want to visit my web site for new and updated versions:
-	http://thelab.demoscene.gr/nuclear/
+you can visit the 3dengfx web site for news and updates:
+	http://thelab.demoscene.gr/nuclear/3dengfx/
 	
 also you will always find the latest version of the code at my
 subversion repository (won't be up always but most of the time it should)
-	svn://nuclear.dnsalias.com/pub/graphics/
+	svn://nuclear.dnsalias.com/pub/3dengfx/
 
 John Tsiombikas - 24 July 2004
