pre-source-reorganization commit

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,5 @@ The 3dengfx realtime visualization system was written by
 	John Tsiombikas <nuclear@siggraph.org>
 	http://thelab.demoscene.gr/nuclear/
 	
+Contributors:
+	Mihalis Georgoulopoulos <msamurai@freemail.gr>
